changes to following functions:get req,reservation
- the get request for the reservation now requires a login
- when you reserve a seat it now checks if the given seat is already
  taken (oops, it wasn't there before?)
