# restAPI/openapi.json
@@ -3,7 +3,7 @@
   "info": {
     "description": "This is an OpenAPI for Reservation table - a project for Service Oriented Programming Lecture",
     "version": "1.0.0",
-    "title": "OpenAPI Reservation table"
+    "title": "OpenAPI for Reservation table"
   },
   "servers": [
     {
@@ -49,9 +49,29 @@
     "/reservation": {
       "get": {
         "description": "Getting the list of reservations",
+        "parameters": [
+          {
+            "name": "username",
+            "in": "query",
+            "description": "username of admin",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          },
+          {
+            "name": "password",
+            "in": "query",
+            "description": "password of admin",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
         "responses": {
           "200": {
-            "description": "Giving back the reserved seats",
+            "description": "Giving back the reserved seats if account exist",
             "content": {
               "application/json": {
                 "schema": {
